--- a/catalog.html
+++ b/catalog.html
@@ -64,7 +64,7 @@
 
 
     <!-- Start of section adapted from https://getbootstrap.com/docs/5.1/examples/album/ -->
-   <header>
+  
 
   <!-- The HTML5 video element that will create the background video on the header -->
  
@@ -84,7 +84,7 @@
       <div class="row g-3 justify-content-evenly">
 
         <!-- Card #1 -->
-        <div class="col-sm-6 col-lg-4 col-xl-3">
+        <div class="col-sm-12 col-lg-6 col-xl-6 col-md-6">
           <div class="card shadow h-100">
             <img class="img-fluid" src="images/SWEATER 2.png" alt="Placeholder Image">
             <div class="card-body">
@@ -99,7 +99,7 @@
         </div>
 
         <!-- Card #2 -->
-        <div class="col-sm-6 col-lg-4 col-xl-3">
+        <div class="col-sm-12 col-lg-6 col-xl-6 col-md-6">
           <div class="card shadow h-100">
             <img class="img-fluid" src="images/SWEATER 1.png" alt="Placeholder Image">
             <div class="card-body">
@@ -114,7 +114,7 @@
         </div>
 
         <!-- Card #3 -->
-        <div class="col-sm-6 col-lg-4 col-xl-3">
+        <div class="col-sm-12 col-lg-6 col-xl-6 col-md-6">
           <div class="card shadow h-100">
             <img class="img-fluid" src="images/SWEATER 3.png" alt="Placeholder Image">
             <div class="card-body">
@@ -129,7 +129,7 @@
         </div>
 
         <!-- Card #4 -->
-        <div class="col-sm-6 col-lg-4 col-xl-3">
+        <div class="col-sm-12 col-lg-6 col-xl-6 col-md-6">
           <div class="card shadow h-100">
             <img class="img-fluid" src="images/SWEATER 4.png" alt="Placeholder Image">
             <div class="card-body">
@@ -144,7 +144,7 @@
         </div>
 
         <!-- Card #5 -->
-        <div class="col-sm-6 col-lg-4 col-xl-3">
+        <div class="col-sm-12 col-lg-6 col-xl-6 col-md-6">
           <div class="card shadow h-100">
             <img class="img-fluid" src="images/SWEATER 5.png" alt="Placeholder Image">
             <div class="card-body">
@@ -159,7 +159,7 @@
         </div>
 
         <!-- Card #6 -->
-        <div class="col-sm-6 col-lg-4 col-xl-3">
+        <div class="col-sm-12 col-lg-6 col-xl-6 col-md-6">
           <div class="card shadow h-100">
             <img class="img-fluid" src="images/SWEATER 6.png" alt="Placeholder Image">
             <div class="card-body">
@@ -173,7 +173,7 @@
           </div>
         </div>
 		<!-- Card #7 -->
-		  <div class="col-sm-6 col-lg-4 col-xl-3">
+		  <div class="col-sm-12 col-lg-6 col-xl-6 col-md-6">
           <div class="card shadow h-100">
             <img class="img-fluid" src="images/SWEATER 7.png" alt="Placeholder Image">
             <div class="card-body">
