--- a/website.html
+++ b/website.html
@@ -139,22 +139,28 @@
 	  	&nbsp;
 	  
 		<h2 class="header-content display-1 text-center">The VirtYou Movement</h2>
-	  <div class="row"></div>
-	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite1.jpg" alt="" class=""></div>
-	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite2.jpg" alt="" class=""></div>
-	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite12.jpg" alt="" class=""></div>
-	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite5.jpg" alt="" class=""></div>
 	  
+	  <div class="container-fluid">
+	  <div class="row">
+	  <div class="col-lg-3 col-md-6 col-sm-12"><img src="images/picturewebsite1.jpg" class="img.fluid" alt=""></div>
+	  <div class="col-lg-3 col-md-6 col-sm-12"><img src="images/picturewebsite2.jpg" class="img.fluid" alt=""></div>
+	  <div class="col-lg-3 col-md-6 col-sm-12"><img src="images/picturewebsite12.jpg" class="img.fluid" alt=""></div>
+	  <div class="col-lg-3 col-md-6 col-sm-12"><img src="images/picturewebsite5.jpg" class="img.fluid" alt=""></div>
+	</div><br>
 	  
-	  <div class="row"></div>
-	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite6.jpg" alt="" class=""></div>
-	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite7.jpg" alt="" class=""></div>
-	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite11.jpg" alt="" class=""></div>
-	  
+	 <div class="container-fluid">	  
+	  <div class="row">
+	  <div class="col-lg-3 col-md-6 col-sm-12"><img src="images/picturewebsite6.jpg" alt="" class="imag.fluid"></div>
+	  <div class="col-lg-3 col-md-6 col-sm-12"><img src="images/picturewebsite7.jpg" alt="" class="image.fluid"></div>
+	  <div class="col-lg-3 col-md-6 col-sm-12"><img src="images/picturewebsite11.jpg" alt="" class="image.fluid"></div>
+	<div class="col-lg-3 col-md-6 col-sm-12"><img src="images/picturewebsite10.jpg" alt="" class="image.fluid">
+	</div>
+	</div>  <br>
 	 
-	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite10.jpg" alt="" class=""></div>
-	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite3.jpg" alt="" class=""></div>
-	  <div class="col col-lg-one-fourth col-md-one-half"><img src="images/picturewebsite8.jpg" alt="" class=""></div>
+	<div class="container-fluid pictures-middle">	  
+	  <div class="row">
+	  <div class="col-lg-3 col-md-6 col-sm-12"><img src="images/picturewebsite3.jpg" alt="" class="image.fluid"></div>
+	  <div class="col-lg-3 col-md-6 col-sm-12"><img src="images/picturewebsite8.jpg" alt="" class="image.fluid"></div>
 	
     <!-- A footer with socials -->  
     <footer class="shadow-lg mt-5 py-4 bg-body">
