--- a/account.html
+++ b/account.html
@@ -90,8 +90,8 @@
 	<body>
 		
 		<div class="sign-in">
-    	<img src="images/user.png">
-			<h1>Sign in to your Account</h1>			
+			<h1>Sign in to your account</h1>
+			<img src="images/user.png">
 			<form>
 			<input type="user name" class="input-box" placeholder="user name">
 			<input type="password" class="input-box" placeholder="password">
