--- a/about virtyou.html
+++ b/about virtyou.html
@@ -16,7 +16,7 @@
     <title>Bootstrap Base Template</title>
   </head>
   <body>
-	  b
+  Michelle Schepers is 23-years-old and lives in Breda. Currently, she studies 'Creative Business', which she does with a lot of passion. She is devoted to her work and a go-getter. By this, she hopes to help others and to voice the values she stands behind. After having her boundaries crossed in multiple fields, by multiple people, she is the ideal person to work for this brand. She knows the problems first-hand and gives her all to tackle this problem and to work towards a solution with as many people as possible. She believes in the brand and knows that VirtYou can make a real difference.&nbsp; "Many people know about the problem, few do something about it. It is time to voice our discomforts and to set boundaries!"&nbsp;	  b
 	  <!-- Navigation bar, adapted from https://getbootstrap.com/docs/5.1/components/navbar/ -->
 <nav class="navbar navbar-expand-lg navbar-light">
   <div class="container-fluid">
@@ -122,7 +122,7 @@
             <img src="images/michellepicture.png" alt="Placeholder Image" class="img-fluid" width:200px;>
             <div class="card-body">
               <h5 class="card-title">Michelle Schepers</h5>
-              <p class="card-text">Michelle Schepers is 23-years-old and lives in Breda. Currently, she studies 'Creative Business', which she does with a lot of passion. She is devoted to her work and a go-getter. By this, she hopes to help others and voice the values she stands behind. After having her boundaries crossed in multiple fields, by multiple people, she is the ideal person to work for this brand. She knows the problems first-hand and gives her all to tackle this problem and to work towards a solution with as many people as possible. She believes in the brand and knows that VirtYou can make a real difference.&nbsp; "Many people know about the problem, few do something about it. It is time to voice our discomforts and to set boundaries!"&nbsp;</p>
+              <p class="card-text">&nbsp;</p>
             </div>
             <div class="card-footer p-2 text-end">
               
