--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
               <a class="nav-link" href="#">About Empowerment&nbsp;</a>
             </li>
 			  <li class="nav-item">
-              <a class="nav-link" href="#">Account&nbsp;</a>
-            </li>
+            <a href="account.html">Account&nbsp;</a> </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Account&nbsp; </a>
