link to register

--- a/register.html
+++ b/register.html
@@ -102,7 +102,7 @@
 			  
 				<p><span><input type="checkbox"></span> I agree to the terms and conditions of the service.</p>
 			<button type="button" class="sing-btn">Register</button>
-			<p class="or">OR</p>
+			<p class="or">----- OR -----</p>
 				<button type="button" class="sing-btn">Sign In</button>
 			</form>
 		
