--- a/register.html
+++ b/register.html
@@ -95,7 +95,8 @@
 		  <form>
 			<input type="user name" class="input-box" placeholder="user name">
 			<input type="password" class="input-box" placeholder="password">
-			   <input type="repeat password" class="input-box" placeholder="repeat password"><input type="email" class="input-box" placeholder="email">
+			<input type="repeat password" class="input-box" placeholder="repeat password">
+			  <input type="email" class="input-box" placeholder="email">
 			  <input type="adress" class="input-box" placeholder="adress (street, housenumber)">
 			  <input type="postal code, city" class="input-box" placeholder="postal code, city">
 			 
@@ -103,7 +104,7 @@
 				<p><span><input type="checkbox"></span> I agree to the terms and conditions of the service.</p>
 			<button type="button" class="sing-btn">Register</button>
 			<p class="or">----- OR -----</p>
-				<button type="button" class="sing-btn">Sign In</button>
+				<a href="account.html" style="color:black">Sign In</a>
 			</form>
 		
 		</div>
