--- a/catalog.html
+++ b/catalog.html
@@ -107,7 +107,7 @@
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
             <div class="card-footer p-2 text-end">
-              <a href="#" class="btn btn-primary">View&nbsp;</a>
+              <a href="#sweater2.html" class="btnview">View&nbsp;</a>
             </div>
           </div>
         </div>
