--- a/catalog.html
+++ b/catalog.html
@@ -92,8 +92,8 @@
               <p class="card-text">Available in:  White</p>
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
-            <div class="card-footer p-2 text-end">
-            <a href="#sweater 1">View</a><a>&nbsp;</a> </div>
+            <div class="btnviewcard-footer p-2 text-end">
+            <a href="#sweater2.html" class="btnview">View</a><a>&nbsp;</a> </div>
           </div>
         </div>
 
@@ -106,7 +106,7 @@
               <p class="card-text"> Available in:  White &nbsp;</p>
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
-            <div class="card-footer p-2 text-end">
+            <div class="btnviewcard-footer p-2 text-end">
               <a href="#sweater2.html" class="btnview">View&nbsp;</a>
             </div>
           </div>
@@ -121,8 +121,8 @@
               <p class="card-text">Available in:  White</p>
               <p class="card-text">Available in : XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
-            <div class="card-footer p-2 text-end">
-              <a href="#" class="btn btn-primary">View&nbsp;</a>
+            <div class="btnviewcard-footer p-2 text-end">
+              <a href="#" class="btnview">View&nbsp;</a>
             </div>
           </div>
         </div>
@@ -136,8 +136,8 @@
               <p class="card-text"> Available in:  White</p>
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
-            <div class="card-footer p-2 text-end">
-              <a href="#" class="btn btn-primary">View&nbsp;</a>
+            <div class="btnviewcard-footer p-2 text-end">
+              <a href="#" class="btnview">View&nbsp;</a>
             </div>
           </div>
         </div>
@@ -151,8 +151,8 @@
               <p class="card-text"> Available in:  White</p>
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
-            <div class="card-footer p-2 text-end">
-              <a href="#" class="btn btn-primary">View&nbsp;</a>
+            <div class="btnviewcard-footer p-2 text-end">
+              <a href="#" class="btnview">View&nbsp;</a>
             </div>
           </div>
         </div>
@@ -166,8 +166,8 @@
               <p class="card-text">Available in:  White</p>
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
-            <div class="card-footer p-2 text-end">
-              <a href="#" class="btn btn-primary">View&nbsp;</a>
+            <div class="btnviewcard-footer p-2 text-end">
+              <a href="#" class="btnview">View&nbsp;</a>
             </div>
           </div>
         </div>
@@ -180,8 +180,8 @@
               <p class="card-text"> Available in:  White</p>
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
-            <div class="card-footer p-2 text-end">
-              <a href="#" class="btn btn-primary">View&nbsp;</a>
+            <div class="btnviewcard-footer p-2 text-end">
+              <a href="#" class="btnview">View&nbsp;</a>
             </div>
           </div>
         </div>
