--- a/catalog.html
+++ b/catalog.html
@@ -93,7 +93,7 @@
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
             <div class="btnviewcard-footer p-2 text-end">
-            <a href="#sweater2.html" class="btnview">View</a><a>&nbsp;</a> </div>
+            <a href="#sweater 1.html" class="btnview">View</a><a>&nbsp;</a> </div>
           </div>
         </div>
 
@@ -122,7 +122,7 @@
               <p class="card-text">Available in : XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
             <div class="btnviewcard-footer p-2 text-end">
-              <a href="#" class="btnview">View&nbsp;</a>
+              <a href="#sweater3.html" class="btnview">View&nbsp;</a>
             </div>
           </div>
         </div>
@@ -137,7 +137,7 @@
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
             <div class="btnviewcard-footer p-2 text-end">
-              <a href="#" class="btnview">View&nbsp;</a>
+              <a href="#sweater4.html" class="btnview">View&nbsp;</a>
             </div>
           </div>
         </div>
@@ -152,7 +152,7 @@
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
             <div class="btnviewcard-footer p-2 text-end">
-              <a href="#" class="btnview">View&nbsp;</a>
+              <a href="#sweater5.html" class="btnview">View&nbsp;</a>
             </div>
           </div>
         </div>
@@ -167,7 +167,7 @@
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
             <div class="btnviewcard-footer p-2 text-end">
-              <a href="#" class="btnview">View&nbsp;</a>
+              <a href="#sweater6.html" class="btnview">View&nbsp;</a>
             </div>
           </div>
         </div>
@@ -181,7 +181,7 @@
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
             <div class="btnviewcard-footer p-2 text-end">
-              <a href="#" class="btnview">View&nbsp;</a>
+              <a href="#sweater 7.html" class="btnview">View&nbsp;</a>
             </div>
           </div>
         </div>
