--- a/sweater 6.html
+++ b/sweater 6.html
@@ -78,7 +78,7 @@
       Learn about cards at: https://getbootstrap.com/docs/5.1/components/card/
     -->
  
-	   
+	   <a href="#catalog.html" class="btnback">Back&nbsp;</a>
 	  <main class="container py-4">
       <div class="row g-3 justify-content-evenly">
 	
