All titles made responsive

--- a/about virtyou.html
+++ b/about virtyou.html
@@ -75,10 +75,9 @@
 		  </head>
 		  <body>
  
-	<div class="wrapper header-content">
     <h2 class="header-content display-1 text-center">About VirtYou</h2>
     <h2 class="under-title_aboutvirtyou text-center display-5">About The Team</h2>			  
-</div></body></html>
+</body></html>
 
     
     <!-- A grid with cards
