--- a/about virtyou.html
+++ b/about virtyou.html
@@ -88,7 +88,7 @@
       <div class="row g-3 justify-content-evenly">
 
         <!-- Card #1 -->
-        <div class="col-sm-6 col-lg-4 col-xl-3">
+        <div class="col-sm-6 col-md-4 col-lg-4 col-xl-3">
           <div class="card shadow h-100">
             <img class="img-fluid" src="images/Alisha.jpg" alt="Placeholder Image">
             <div class="card-body">
@@ -102,7 +102,7 @@
         </div>
 
         <!-- Card #2 -->
-        <div class="col-sm-6 col-lg-4 col-xl-3">
+        <div class="col-sm-6 col-md-4 col-lg-4 col-xl-3">
           <div class="card shadow h-100">
             <img class="img-fluid" src="images/kim.jpg" alt="Placeholder Image">
             <div class="card-body">
@@ -116,7 +116,7 @@
         </div>
 
         <!-- Card #3 -->
-        <div class="col-sm-6 col-lg-4 col-xl-3">
+        <div class="col-sm-6 col-md-4 col-lg-4 col-xl-3">
           <div class="card shadow h-100">
             <img src="images/picturemichelle.png" alt="Placeholder Image" class="img-fluid" width:200px;>
             <div class="card-body">
