--- a/catalog.html
+++ b/catalog.html
@@ -185,6 +185,21 @@
             </div>
           </div>
         </div>
+		  
+		<!-- Card #8 -->
+		<div class="col-sm-12 col-lg-6 col-xl-6 col-md-6">
+          <div class="card shadow h-100">
+            <img class="img-fluid" src="images/VirtYou Sweaters_SWEATER 8.png" alt="Placeholder Image">
+            <div class="card-body">
+              <h5 class="card-title">Only Yes Means Yes&nbsp; - Sweater&nbsp; &nbsp;</h5>
+              <p class="card-text"> Available in:  White</p>
+              <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
+            </div>
+            <div class="btnviewcard-footer p-2 text-end">
+              <a href="#sweater 7.html" class="btnview">View&nbsp;</a>
+            </div>
+          </div>
+        </div> 
         <!-- That was the last card -->
 
       </div>
