--- a/about virtyou.html
+++ b/about virtyou.html
@@ -147,7 +147,7 @@
 		 <strong>Self-Determination:</strong>Self-determination is very important to us and to this brand. In our vision we mention that we believe that people should be able to make their own decisions and show their limits. It should be their choice and initiative to where they want it to go and especially where they want it to stop. VirtYou wants to make clear that everyone has the right to have this self-determination.<br>
 	<strong>Respect:</strong> Respect is also one of our core values. With VirtYou we want to contribute to the creation of more respect among people. Because we discuss an issue that involves a lot of respect, or better sad, a lack of respect. We try to change that. Also, we intend to always behave respectfully to our customers.<br>
 		 <strong>Safety:</strong> Safety is our third core value, because looking at the issue we are discussing, the world we are living in now often still lacks this security. Cases as 'The Voice of Holland' show that for years the people who exhibited transgressive behavior could keep doing their thing without being punished for it. To bring awareness to this issue we hope we will contribute to more safety.<br>
-	<strong>Responsiveness:</strong> Responsiveness is key to VirtYou. We want people to respond and to speak up, so that things like 'The Voice of Holland' cannot happen anymore.   
+	<strong>Responsiveness:</strong> Responsiveness is key to VirtYou. We want people to respond and to speak up, so that things like 'The Voice of Holland' cannot happen anymore. </p>   
 	  </div>
 <br><br>
 	  
