--- a/index.html
+++ b/index.html
@@ -35,11 +35,9 @@
               <a class="nav-link" href="catalog.html">Catalog&nbsp;</a>
             </li>
 			  <li class="nav-item">
-              <a class="nav-link" href="#">About VirtYou&nbsp;</a>
+              <a class="nav-link" href="#aboutvirtyou.html">About VirtYou&nbsp;</a>
             </li>
-			  <li class="nav-item">
-              <a class="nav-link" href="#">About Empowerment&nbsp;</a>
-            </li>
+			  
 			  <li class="nav-item">
             <a href="account.html">Account&nbsp;</a> </li>
             <li class="nav-item dropdown">
@@ -170,16 +168,15 @@
         <ul class="list-unstyled d-flex align-items-center opacity-75">
           <li>
             <a href="mailto:Virtyou@outlook.com" target="_blank">
-              <img class="social-icon" src="images/Outlook.png" alt="Follow us on Outlook" width="35">
+              <img class="social-icon" src="images/Outlook.png" alt="Follow us on TikTok" width="35">
             </a>
           </li>
           <li>	
             <a href="https://www.tiktok.com/@virtyou_" target="_blank">
-              <img class="social-icon" src="images/tiktok.jpg" alt="Follow us on TikTok" width="35">
+              <img class="social-icon" src="images/TikTok.jpg" alt="Follow us on TikTok" width="35">
             </a>
           </li>
           <li>
-			  
             <a href="https://www.instagram.com/virtyou_/">
               <img class="social-icon" src="images/instagram.svg" alt="Follow us on Instagram" width="26">
             </a>
