back to catalog button

--- a/sweater 2.html
+++ b/sweater 2.html
@@ -75,7 +75,7 @@
       Learn about cards at: https://getbootstrap.com/docs/5.1/components/card/
     -->
  
-	   <a href="#catalog.html" class="btnback">Back&nbsp;</a>
+	   <a href="catalog.html" class="btnback">Back to catalog&nbsp;</a>
 	  <main class="container py-4">
       <div class="row g-3 justify-content-evenly">
 	
@@ -126,7 +126,7 @@
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
             <div class="btnviewcard-footer p-2 text-end">
-              <a href="#sweater3.html" class="btnview">View&nbsp;</a>
+              <a href="sweater 3.html" class="btnview">View&nbsp;</a>
 				
             </div>
           </div>
@@ -142,7 +142,7 @@
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
             <div class="btncard-footer p-2 text-end">
-              <a href="#sweater5.html" class="btnview">View&nbsp;</a>
+              <a href="sweater 5.html" class="btnview">View&nbsp;</a>
             </div>
           </div>
         </div>
