--- a/sweater 3.html
+++ b/sweater 3.html
@@ -79,7 +79,7 @@
     -->
  
 	  
-	  <a href="#catalog.html" class="btnback">Back&nbsp;</a>
+	  <a href="catalog.html" class="btnback">Back to catalog&nbsp;</a>
 	  <main class="container py-4">
       <div class="row g-3 justify-content-evenly">
 	
@@ -130,7 +130,7 @@
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
             <div class="btnviewcard-footer p-2 text-end">
-              <a href="#sweater2.html" class="btnview">View&nbsp;</a>
+              <a href="sweater 2.html" class="btnview">View&nbsp;</a>
             </div>
           </div>
         </div>
@@ -145,7 +145,7 @@
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
             <div class="btnviewcard-footer p-2 text-end">
-              <a href="#sweater1.html" class="btnview">View&nbsp;</a>
+              <a href="sweater 1.html" class="btnview">View&nbsp;</a>
             </div>
           </div>
         </div>
