--- a/sweater 1.html
+++ b/sweater 1.html
@@ -76,7 +76,7 @@
       Learn about cards at: https://getbootstrap.com/docs/5.1/components/card/
     -->
  
-	  <a href="#catalog.html" class="btnback">Back&nbsp;</a> 
+	  <a href="catalog.html" class="btnback">Back to catalog&nbsp;</a> 
 	  <main class="container py-4">
       <div class="row g-3 justify-content-evenly">
 	
@@ -129,7 +129,7 @@
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
             <div class="btnviewcard-footer p-2 text-end">
-              <a href="#sweater3.html" class="btnview">View&nbsp;</a>
+              <a href="sweater 3.html" class="btnview">View&nbsp;</a>
             </div>
           </div>
         </div>
@@ -144,7 +144,7 @@
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
             <div class="btnviewcard-footer p-2 text-end">
-              <a href="#sweater2.html" class="btnview">View&nbsp;</a>
+              <a href="sweater 2.html" class="btnview">View&nbsp;</a>
             </div>
           </div>
         </div>
