--- a/sweater 5.html
+++ b/sweater 5.html
@@ -78,7 +78,7 @@
       Learn about cards at: https://getbootstrap.com/docs/5.1/components/card/
     -->
  
-	   <a href="#catalog.html" class="btnback">Back&nbsp;</a>
+	   <a href="catalog.html" class="btnback">Back to catalog&nbsp;</a>
 	  <main class="container py-4">
       <div class="row g-3 justify-content-evenly">
 	
@@ -129,7 +129,7 @@
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
             <div class="btnviewcard-footer p-2 text-end">
-              <a href="#sweater6.html" class="btnview">View&nbsp;</a>
+              <a href="sweater 6.html" class="btnview">View&nbsp;</a>
             </div>
           </div>
         </div>
@@ -144,7 +144,7 @@
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
             <div class="btnviewcard-footer p-2 text-end">
-              <a href="#sweater1.html" class="btnview">View&nbsp;</a>
+              <a href="sweater 1.html" class="btnview">View&nbsp;</a>
             </div>
           </div>
         </div>
