--- a/sweater 7.html
+++ b/sweater 7.html
@@ -78,7 +78,7 @@
       Learn about cards at: https://getbootstrap.com/docs/5.1/components/card/
     -->
  
-	   <a href="#catalog.html" class="btnback">Back&nbsp;</a>
+	   <a href="catalog.html" class="btnback">Back to catalog&nbsp;</a>
 	  <main class="container py-4">
       <div class="row g-3 justify-content-evenly">
 	
@@ -129,7 +129,7 @@
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
             <div class="btnviewcard-footer p-2 text-end">
-              <a href="#sweater5.html" class="btnview">View&nbsp;</a>
+              <a href="sweater 5.html" class="btnview">View&nbsp;</a>
             </div>
           </div>
         </div>
@@ -143,8 +143,8 @@
               <p class="card-text"> Available in:  White &nbsp;</p>
               <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
             </div>
-            <div class="card-footer p-2 text-end">
-              <a href="#sweater3.html" class="btnview">View&nbsp;</a>
+            <div class="btnviewcard-footer p-2 text-end">
+              <a href="sweater 3.html" class="btnview">View&nbsp;</a>
             </div>
           </div>
         </div>
