--- a/sweater 1.html
+++ b/sweater 1.html
@@ -58,27 +58,20 @@
         </div>
       </div>
     </nav>
-    <!-- End of navigation bar -->
-
-
-    <!-- Start of section adapted from https://getbootstrap.com/docs/5.1/examples/album/ -->
-  
-
-  <!-- The HTML5 video element that will create the background video on the header -->
- 
-
-  <!-- The header content -->
-
-    <!-- End of hero section -->
-
-    <!-- A grid with cards
+    <p>&nbsp;</p>
+    <p>
+      <!-- End of navigation bar -->
+      <!-- Start of section adapted from https://getbootstrap.com/docs/5.1/examples/album/ -->
+      <!-- The HTML5 video element that will create the background video on the header -->
+      <!-- The header content -->
+      <!-- End of hero section -->
+      <!-- A grid with cards
       Learn about grids at: https://getbootstrap.com/docs/5.1/layout/grid/
       Learn about cards at: https://getbootstrap.com/docs/5.1/components/card/
     -->
- 
-	  <a href="catalog.html" class="btnback">Back to catalog&nbsp;</a> 
-	  <main class="container py-4">
-      <div class="row g-3 justify-content-evenly">
+      <a href="catalog.html" class="btnback">Back to catalog&nbsp;</a> </p>
+<main class="container py-4">
+  <div class="row g-3 justify-content-evenly">
 	
 		  
  <div class="col-sm-12 col-lg-6 col-xl-6 col-md-6" align="left">
