--- a/sweater 4.html
+++ b/sweater 4.html
@@ -38,9 +38,6 @@
               <a class="nav-link" href="about virtyou.html">About VirtYou&nbsp;</a>
             </li>
 			  <li class="nav-item">
-              <a class="nav-link" href="#">About Empowerment&nbsp;</a>
-            </li>
-			  <li class="nav-item">
               <a class="nav-link" href="account.html">Account&nbsp;</a>
             </li>
             <li class="nav-item dropdown">
@@ -60,26 +57,20 @@
         </div>
       </div>
     </nav>
-    <!-- End of navigation bar -->
-
-
-    <!-- Start of section adapted from https://getbootstrap.com/docs/5.1/examples/album/ -->
-  
-
-  <!-- The HTML5 video element that will create the background video on the header -->
- 
-
-  <!-- The header content -->
-
-    <!-- End of hero section -->
-
-    <!-- A grid with cards
+    <p>&nbsp;</p>
+    <p>
+      <!-- End of navigation bar -->
+      <!-- Start of section adapted from https://getbootstrap.com/docs/5.1/examples/album/ -->
+      <!-- The HTML5 video element that will create the background video on the header -->
+      <!-- The header content -->
+      <!-- End of hero section -->
+      <!-- A grid with cards
       Learn about grids at: https://getbootstrap.com/docs/5.1/layout/grid/
       Learn about cards at: https://getbootstrap.com/docs/5.1/components/card/
     -->
- <a href="catalog.html" class="btnback">Back to catalog&nbsp;</a>
-	  <main class="container py-4">
-	   <div class="row g-3 justify-content-evenly">
+      <a href="catalog.html" class="btnback">Back to catalog&nbsp;</a> </p>
+<main class="container py-4">
+  <div class="row g-3 justify-content-evenly">
 	
 	 
 	  
