--- a/about virtyou.html
+++ b/about virtyou.html
@@ -174,7 +174,7 @@
 		  </p>
    
 	
-	<!-- A footer with socials -->  
+ <!-- A footer with socials -->  
     <footer class="shadow-lg mt-5 py-4 bg-body">
       <div class="container d-flex justify-content-between align-items-center">
         <p>
@@ -182,7 +182,7 @@
         </p>
         <ul class="list-unstyled d-flex align-items-center opacity-75">
           <li>
-            <a href="mailto:Virtyou@outlook.com" target="_blank">
+            <a href="Virtyou@outlook.com" target="_blank">
               <img class="social-icon" src="images/Outlook.png" alt="Follow us on Outlook" width="35">
             </a>
           </li>
