make logo into home button

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -161,6 +162,7 @@
 	  <div class="col-lg-3 col-md-6 col-sm-6"><img src="images/picturewebsite8.jpg" alt="" class="image.fluid"></div>
 	
     <!-- A footer with socials -->  
+     <!-- A footer with socials -->  
     <footer class="shadow-lg mt-5 py-4 bg-body">
       <div class="container d-flex justify-content-between align-items-center">
         <p>
@@ -168,16 +170,17 @@
         </p>
         <ul class="list-unstyled d-flex align-items-center opacity-75">
           <li>
-            <a href="mailto:Virtyou@outlook.com" target="_blank">
-              <img class="social-icon" src="images/Outlook.png" alt="Follow us on TikTok" width="35">
+            <a href="Virtyou@outlook.com" target="_blank">
+              <img class="social-icon" src="images/Outlook.png" alt="Follow us on Outlook" width="35">
             </a>
           </li>
           <li>	
             <a href="https://www.tiktok.com/@virtyou_" target="_blank">
-              <img class="social-icon" src="images/TikTok.jpg" alt="Follow us on TikTok" width="35">
+              <img class="social-icon" src="images/tiktok.jpg" alt="Follow us on TikTok" width="35">
             </a>
           </li>
           <li>
+			  
             <a href="https://www.instagram.com/virtyou_/">
               <img class="social-icon" src="images/instagram.svg" alt="Follow us on Instagram" width="26">
             </a>
@@ -185,6 +188,7 @@
         </ul>
       </div>
     </footer>
+    <!-- End of the grid -->
     <!-- End of the grid -->
 
   </body>
