--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <!-- End of carrousel -->
 	  	&nbsp;
 	  
-		<h2 class="header-content display-1 text-center">The VirtYou Movement</h2>
+		<h2 class="header-content display-1 text-center">Others that stand behind us</h2>
 	  
 	  <div class="container-fluid">
 	  <div class="row">
