sweaters link from index

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <img src="images/VirtYou Sweaters_SWEATER 3.png" class="d-block mx-auto w-100" alt="...">
             <div class="carousel-caption">
               <p>
-                <a href="#" class="btn btn-outline-light my-md-2">My Body My Rules - Sweater<span class="d-inline d-md-none"> About Sweater</span></a>
+                <a href="sweater 3.html" class="btn btn-outline-light my-md-2">My Body My Rules - Sweater<span class="d-inline d-md-none"> About Sweater</span></a>
               </p>
             </div>
           </div>
@@ -110,7 +110,7 @@
             <img src="images/VirtYou Sweaters_SWEATER 2.png" class="d-block mx-auto w-100" alt="...">
             <div class="carousel-caption">
               <p>
-                <a href="catalog.html" class="btn btn-outline-light my-md-2">Fuck Off + Logo - Sweater<span class="d-inline d-md-none"> About Sweater</span></a>
+                <a href="sweater 2.html" class="btn btn-outline-light my-md-2">Fuck Off + Logo - Sweater<span class="d-inline d-md-none"> About Sweater</span></a>
               </p>
             </div>
           </div>
@@ -118,7 +118,7 @@
             <img src="images/VirtYou Sweaters_SWEATER 1.png" class="d-block mx-auto w-100" alt="...">
             <div class="carousel-caption">
               <p>
-                <a href="#" class="btn btn-outline-light my-md-2">Only Logo - Sweater<span class="d-inline d-md-none"> About Sweater</span></a>
+                <a href="sweater 1.html" class="btn btn-outline-light my-md-2">Only Logo - Sweater<span class="d-inline d-md-none"> About Sweater</span></a>
               </p>
             </div>
           </div>
