--- a/about virtyou.html
+++ b/about virtyou.html
@@ -181,13 +181,13 @@
         </p>
         <ul class="list-unstyled d-flex align-items-center opacity-75">
           <li>
-            <a href="Virtyou@outlook.com" target="_blank">
-              <img class="social-icon" src="images/Outlook.png" alt="Follow us on Outlook" width="35">
+            <a href="mailto:Virtyou@outlook.com" target="_blank">
+              <img class="social-icon" src="images/Outlook.png" alt="Follow us on TikTok" width="35">
             </a>
           </li>
           <li>	
             <a href="https://www.tiktok.com/@virtyou_" target="_blank">
-              <img class="social-icon" src="images/tiktok.jpg" alt="Follow us on TikTok" width="35">
+              <img class="social-icon" src="images/TikTok.jpg" alt="Follow us on TikTok" width="35">
             </a>
           </li>
           <li>
