--- a/corporate.html
+++ b/corporate.html
@@ -103,7 +103,7 @@
         </p>
         <ul class="list-unstyled d-flex align-items-center opacity-75">
           <li>
-            <a href="Virtyou@outlook.com" target="_blank">
+            <a href="mailto:Virtyou@outlook.com" target="_blank">
               <img class="social-icon" src="images/Outlook.png" alt="Follow us on Outlook" width="35">
             </a>
           </li>
