account + register title change

--- a/about virtyou.html
+++ b/about virtyou.html
@@ -137,13 +137,15 @@
 	<br>
 	
 	  <div class="brand-body card shadow h-100">
-	 <p  class="brand-text"> VirtYou was founded in February 2022. The brand value is based on a lyric from Yellow by Coldplay, namely "I drew a line." We, Kim van den Ham, Michelle Schepers, and Alisha Wenas believe that, "In a world where people are still living in the rules of the past and patriarchy, we believe that it is vital that all people feel safe, protected, and able to voice their feelings and discomforts, because only then we can have a fair and civilized society." Nowadays, women and minorities are still treated different. They still encounter problems when it comes to boundary-crossing behavior. Many times the blame is placed on the people who do not dare to stand up for themselves. However, this world does not make these people feel safe and respect to actually speak up. We want to make it easier to stand up for yourself through our brand and products. <br>
+	 <p  class="brand-text"> <br>
+VirtYou was founded in February 2022. The brand value is based on a lyric from Yellow by Coldplay, namely "I drew a line." We, Kim van den Ham, Michelle Schepers, and Alisha Wenas believe that, "In a world where people are still living in the rules of the past and patriarchy, we believe that it is vital that all people feel safe, protected, and able to voice their feelings and discomforts, because only then we can have a fair and civilized society." Nowadays, women and minorities are still treated different. They still encounter problems when it comes to boundary-crossing behavior. Many times the blame is placed on the people who do not dare to stand up for themselves. However, this world does not make these people feel safe and respect to actually speak up. We want to make it easier to stand up for yourself through our brand and products. <br>
 	<br>
 	Therefore, our brand values are:<br>
 		 <strong>Self-Determination:</strong>Self-determination is very important to us and to this brand. In our vision we mention that we believe that people should be able to make their own decisions and show their limits. It should be their choice and initiative to where they want it to go and especially where they want it to stop. VirtYou wants to make clear that everyone has the right to have this self-determination.<br>
 	<strong>Respect:</strong> Respect is also one of our core values. With VirtYou we want to contribute to the creation of more respect among people. Because we discuss an issue that involves a lot of respect, or better sad, a lack of respect. We try to change that. Also, we intend to always behave respectfully to our customers.<br>
 		 <strong>Safety:</strong> Safety is our third core value, because looking at the issue we are discussing, the world we are living in now often still lacks this security. Cases as 'The Voice of Holland' show that for years the people who exhibited transgressive behavior could keep doing their thing without being punished for it. To bring awareness to this issue we hope we will contribute to more safety.<br>
-	<strong>Responsiveness:</strong> Responsiveness is key to VirtYou. We want people to respond and to speak up, so that things like 'The Voice of Holland' cannot happen anymore. </p>   
+	<strong>Responsiveness:</strong> Responsiveness is key to VirtYou. We want people to respond and to speak up, so that things like 'The Voice of Holland' cannot happen anymore. <br>
+</p>   
 	  </div>
 <br><br>
 	  
