--- a/account.html
+++ b/account.html
@@ -87,7 +87,7 @@
 	<body>
 		
 		<div class="sign-in">
-			<h1>Sign in to your account</h1>
+			<h1 class="sign-in-heading text-center"> Sign in to your account</h1>
 			<img src="images/user.png">
 			<form>
 			<input type="user name" class="input-box" placeholder="user name">
