--- a/index.html
+++ b/index.html
@@ -161,8 +161,7 @@
 	  <div class="col-lg-3 col-md-6 col-sm-6"><img src="images/picturewebsite3.jpg" alt="" class="image.fluid"></div>
 	  <div class="col-lg-3 col-md-6 col-sm-6"><img src="images/picturewebsite8.jpg" alt="" class="image.fluid"></div>
 	
-    <!-- A footer with socials -->  
-     <!-- A footer with socials -->  
+    <!-- A footer with socials -->
     <footer class="shadow-lg mt-5 py-4 bg-body">
       <div class="container d-flex justify-content-between align-items-center">
         <p>
@@ -171,16 +170,15 @@
         <ul class="list-unstyled d-flex align-items-center opacity-75">
           <li>
             <a href="mailto:Virtyou@outlook.com" target="_blank">
-              <img class="social-icon" src="images/Outlook.png" alt="Follow us on Outlook" width="35">
+              <img class="social-icon" src="images/Outlook.png" alt="Follow us on TikTok" width="35">
             </a>
           </li>
           <li>	
             <a href="https://www.tiktok.com/@virtyou_" target="_blank">
-              <img class="social-icon" src="images/tiktok.jpg" alt="Follow us on TikTok" width="35">
+              <img class="social-icon" src="images/TikTok.jpg" alt="Follow us on TikTok" width="35">
             </a>
           </li>
           <li>
-			  
             <a href="https://www.instagram.com/virtyou_/">
               <img class="social-icon" src="images/instagram.svg" alt="Follow us on Instagram" width="26">
             </a>
@@ -189,7 +187,12 @@
       </div>
     </footer>
     <!-- End of the grid -->
-    <!-- End of the grid -->
 
-  </body>
+ 
+	</body>
 </html>
+
+
+	
+
+
