--- a/register.html
+++ b/register.html
@@ -88,7 +88,7 @@
 	<body>
 		
 		<div class="sign-in">
-			<h1>Register&nbsp;</h1>
+			<h1 class="register-text">Register</h1>
 			<img src="images/user.png">
 		  <form>
 			<input type="user name" class="input-box" placeholder="user name">
