--- a/register.html
+++ b/register.html
@@ -15,7 +15,7 @@
 
     <title>Bootstrap Base Template</title>
   </head>
-  <body>
+</html>
 
     <!-- Navigation bar, adapted from https://getbootstrap.com/docs/5.1/components/navbar/ -->
     <nav class="navbar navbar-expand-lg navbar-light">
@@ -78,6 +78,8 @@
 	   
 	  <main class="container py-4">
       <div class="row g-3 justify-content-evenly">
+		  </div>
+	  </main> <br>
 
     
 <html>
@@ -89,8 +91,8 @@
 		
 		<div class="sign-in">
 			<h1 class="register-text">Register</h1>
-			<img src="images/user.png">
-		  <form>
+			<img src="images/user.png alt" alt="">
+		  <form> 
 			<input type="user name" class="input-box" placeholder="user name">
 			<input type="password" class="input-box" placeholder="password">
 			<input type="repeat password" class="input-box" placeholder="repeat password">
