--- a/register.html
+++ b/register.html
@@ -86,13 +86,13 @@
 <head>
 	<title>Sign In</title>
 	<link rel="stylesheet" href="styel.css">
-	</head>
+</head>
 	<body>
 		
 		<div class="sign-in">
-			<h1 class="register-text">Register</h1>
-			<img src="images/user.png alt" alt="">
-		  <form> 
+			<h1 class="register-text">&nbsp;Register</h1>
+			<img src="images/user.png" alt=""
+		<form> 	
 			<input type="user name" class="input-box" placeholder="user name">
 			<input type="password" class="input-box" placeholder="password">
 			<input type="repeat password" class="input-box" placeholder="repeat password">
@@ -105,12 +105,9 @@
 			<button type="button" class="sing-btn">Register</button>
 			<p class="or">----- OR -----</p>
 				<a href="account.html" style="color:black">Sign In</a>
-			</form>
-		
+			
 		</div>
-	
-	
-	</body>
+</body>
 </html>
         
 
