--- a/index.html
+++ b/index.html
@@ -145,21 +145,16 @@
 	  <div class="col-lg-3 col-md-6 col-sm-6"><img src="images/picturewebsite2.jpg" class="img.fluid" alt=""></div>
 	  <div class="col-lg-3 col-md-6 col-sm-6"><img src="images/picturewebsite12.jpg" class="img.fluid" alt=""></div>
 	  <div class="col-lg-3 col-md-6 col-sm-6"><img src="images/picturewebsite5.jpg" class="img.fluid" alt=""></div>
-	</div><br>
-	  
+	</div>
 	 <div class="container-fluid">	  
 	  <div class="row">
-	  <div class="col-lg-3 col-md-6 col-sm-6"><img src="images/picturewebsite6.jpg" alt="" class="imag.fluid"></div>
-	  <div class="col-lg-3 col-md-6 col-sm-6"><img src="images/picturewebsite7.jpg" alt="" class="image.fluid"></div>
-	  <div class="col-lg-3 col-md-6 col-sm-6"><img src="images/picturewebsite11.jpg" alt="" class="image.fluid"></div>
-	<div class="col-lg-3 col-md-6 col-sm-6"><img src="images/picturewebsite10.jpg" alt="" class="image.fluid">
+	  <div class="col-lg-3 col-md-6 col-sm-6"><img src="images/picturewebsite6.jpg" alt="" class="img.fluid"></div>
+	  <div class="col-lg-3 col-md-6 col-sm-6"><img src="images/picturewebsite7.jpg" alt="" class="img.fluid"></div>
+	  <div class="col-lg-3 col-md-6 col-sm-6"><img src="images/picturewebsite11.jpg" alt="" class="img.fluid"></div>
+	<div class="col-lg-3 col-md-6 col-sm-6"><img src="images/picturewebsite10.jpg" alt="" class="img.fluid">
 	</div>
-	</div>  <br>
+	</div>
 	 
-	<div class="container-fluid pictures-middle">	  
-	  <div class="row">
-	  <div class="col-lg-3 col-md-6 col-sm-6"><img src="images/picturewebsite3.jpg" alt="" class="image.fluid"></div>
-	  <div class="col-lg-3 col-md-6 col-sm-6"><img src="images/picturewebsite8.jpg" alt="" class="image.fluid"></div>
 	
     <!-- A footer with socials -->
     <footer class="shadow-lg mt-5 py-4 bg-body">
