--- a/about virtyou.html
+++ b/about virtyou.html
@@ -137,7 +137,7 @@
 	  <h2 class="under-title_aboutvirtyou text-center display-5">About The Brand</h2>
 	<br>
 	
-	  <div class="brand-body card shadow h-100">
+	  <div class="brand-body card shadow h-100"><br>
 	<img class="img-fluid about-the-brand-logo" src="images/about_virtyou_logo.png" alt="Placeholder Image">
 	 <p  class="brand-text">   <br>
 VirtYou was founded in February 2022. The brand value is based on a lyric from Yellow by Coldplay, namely "I drew a line." We, Kim van den Ham, Michelle Schepers, and Alisha Wenas believe that, "In a world where people are still living in the rules of the past and patriarchy, we believe that it is vital that all people feel safe, protected, and able to voice their feelings and discomforts, because only then we can have a fair and civilized society." Nowadays, women and minorities are still treated different. They still encounter problems when it comes to boundary-crossing behavior. Many times the blame is placed on the people who do not dare to stand up for themselves. However, this world does not make these people feel safe and respect to actually speak up. We want to make it easier to stand up for yourself through our brand and products.<br>
