--- a/account.html
+++ b/account.html
@@ -75,8 +75,7 @@
       Learn about cards at: https://getbootstrap.com/docs/5.1/components/card/
     -->
 	   
-	  <main class="container py-4">
-      <div class="row g-3 justify-content-evenly">
+	 
 
     
 <html>
@@ -86,6 +85,8 @@
 	</head>
 	<body>
 		
+		 <main class="container py-4">
+		  <div class="row g-3 justify-content-evenly"></div>
 		<div class="sign-in">
 			<h1 class="sign-in-heading text-center"> Sign in to your account</h1>
 			<img src="images/user.png">
@@ -97,8 +98,9 @@
 			<p class="or">OR</p>
 				<a href="register.html" style="color:black">Register</a>
 			</form>
+			</div>
+			</main>
 		
-		</div>
 	
 	
 	
@@ -134,7 +136,8 @@
     <!-- End of the grid -->
     <!-- End of the grid -->
 
-
+	</body>
+	</html>
 	</body>
 </html>
 	  
