link instagram first photo fixed

--- a/about virtyou.html
+++ b/about virtyou.html
@@ -161,7 +161,7 @@ VirtYou was founded in February 2022. The brand value is based on a lyric from Y
 	<div class="container-fluid">
 	  <div class="row">
 	  <div class="col-lg-3 col-md-6 col-sm-6">
-		  <a href="https://www.instagram.com/p/CbKFCvbMlRn/">
+		  <a href="https://www.instagram.com/p/CcFQP-DM0nd/">
 			<img src="images/women post.png" alt="" class=""></a>
 		  </div>
 	<div class="col-lg-3 col-md-6 col-sm-6">
