errors register and sign in fixed

--- a/account.html
+++ b/account.html
@@ -81,7 +81,7 @@
 <html>
 <head>
 	<title>Sign In</title>
-	<link rel="stylesheet" href="styel.css">
+	<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		
@@ -89,17 +89,21 @@
 		  <div class="row g-3 justify-content-evenly"></div>
 		<div class="sign-in">
 			<h1 class="sign-in-heading text-center"> Sign in to your account</h1>
-			<img src="images/user.png">
+			<img src="images/user.png" alt=""
 			<form>
 			<input type="user name" class="input-box" placeholder="user name">
 			<input type="password" class="input-box" placeholder="password">
+				
 				<p><span><input type="checkbox"></span> I agree to the terms and conditions of the service.</p>
 			<button type="button" class="sing-btn">Sign In</button>
 			<p class="or">OR</p>
 				<a href="register.html" style="color:black">Register</a>
-			</form>
-			</div>
+			
+				</div>
 			</main>
+		
+</body>
+</html>
 		
 	
 	
@@ -107,7 +111,6 @@
 
 
     <!-- A footer with socials -->
- <!-- A footer with socials -->
     <footer class="shadow-lg mt-5 py-4 bg-body">
       <div class="container d-flex justify-content-between align-items-center">
         <p>
@@ -133,11 +136,8 @@
       </div>
     </footer>
     <!-- End of the grid -->
-    <!-- End of the grid -->
-    <!-- End of the grid -->
 
 	</body>
 	</html>
-	</body>
-</html>
+
 	  
