--- a/register.html
+++ b/register.html
@@ -83,7 +83,7 @@
 <html>
 <head>
 	<title>Sign In</title>
-	<link rel="stylesheet" href="styel.css">
+	<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		
