--- a/register.html
+++ b/register.html
@@ -95,7 +95,7 @@
 		<form> 	
 			<input type="user name" class="input-box" placeholder="user name">
 			<input type="password" class="input-box" placeholder="password">
-			<input type="repeat password" class="input-box" placeholder="repeat password">
+			<input type="password" class="input-box" placeholder="repeat password">
 			  <input type="email" class="input-box" placeholder="email">
 			  <input type="adress" class="input-box" placeholder="adress (street, housenumber)">
 			  <input type="postal code, city" class="input-box" placeholder="postal code, city">
