--- a/register.html
+++ b/register.html
@@ -104,7 +104,7 @@
 				<p><span><input type="checkbox"></span> I agree to the terms and conditions of the service.</p>
 			<button type="button" class="sing-btn">Register</button>
 			<p class="or">----- OR -----</p>
-				<a href="account.html" style="color:black">Sign In</a>
+			<button type="button" class="sing-btn">Sign up </button> 
 			
 			</div>
 			</main>
