--- a/register.html
+++ b/register.html
@@ -104,7 +104,8 @@
 				<p><span><input type="checkbox"></span> I agree to the terms and conditions of the service.</p>
 			<button type="button" class="sing-btn">Register</button>
 			<p class="or">----- OR -----</p>
-				<button class="nav-link" href="account.html" type="button" style="Color:black">Sign in</button> 
+				<a href="account.html" style="color:black">Sign in</a> 
+		
 			
 			
 			</div>
