--- a/account.html
+++ b/account.html
@@ -88,7 +88,7 @@
 		 <main class="container py-4">
 		  <div class="row g-3 justify-content-evenly"></div>
 		<div class="sign-in">
-			<h1 class="sign-in-heading text-center"> Sign in to your account</h1>
+			<h1 class="sign-in-heading text-center"> Sign&nbsp; in to your account</h1>
 			<img src="images/user.png" alt=""
 			<form>
 			<input type="user name" class="input-box" placeholder="user name">
