--- a/account.html
+++ b/account.html
@@ -88,7 +88,8 @@
 		 <main class="container py-4">
 		  <div class="row g-3 justify-content-evenly"></div>
 		<div class="sign-in">
-			<h1 style="color:black">Register</h1><br>
+			<h1 style="color:black">Sign in to your account</h1>
+			<br>
 			<img src="images/user.png" alt=""
 			<form>
 			<input type="user name" class="input-box" placeholder="user name">
