--- a/register.html
+++ b/register.html
@@ -90,8 +90,9 @@
 		<main class="container py-4">
 		  <div class="row g-3 justify-content-evenly"></div>
 		<div class="sign-in">
-			<h1 class="register-text">&nbsp;Register</h1>
-			<img src="images/user.png" alt=""
+			<h1 class="register-text">Register</h1><br>
+			
+		<img src="images/user.png" alt=""
 		<form> 	
 			<input type="user name" class="input-box" placeholder="user name">
 			<input type="password" class="input-box" placeholder="password">
