--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@
 			 
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Account&nbsp; </a>
+              Corporate&nbsp; </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Content Justification </a></li>
+                <li><a class="dropdown-item" href="#">Production Justification</a></li>
+				<li><a class="dropdown-item" href="#">Marketing Justification </a></li>
+				<li><a class="dropdown-item" href="#">Management Justification </a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><a class="dropdown-item" href="#">Marketing</a></li>
               </ul>
             </li>
             <li class="nav-item">
