--- a/content justification.html
+++ b/content justification.html
@@ -64,10 +64,10 @@
     </header>
 
     <main class="container py-4">
-      <h2>Marketing</h2>
-      <h4 class="mt-4">Context of campaign and promotional activities</h4>
-      <p>Explain the context of the campaign is (What the campaign is about, what the message is, which promotional activities were executed). In addition, present the objectives as mentioned in the Communication & Media Plan.</p>
-      <p>Explain and justify the chosen channels/platforms used and show there is a solid connection to the objectives established in the Communication & Media Plan.</p>
+      <h2 class="content_text"> 1 Content</h2>
+      <h4 class="content_subtext mt-4">Brand Vision&nbsp;</h4>
+      <p>We started creating our brand by making a brand vision. We have chosen the song Michelle got, namely Yellow by Coldplay. In this song, a sentence grabbed our attention because it reminded us of something that we have been struggling with and of a current issue that is going on in the world. The sentence we used is "I drew a line." We immediately thought of setting and stating boundaries and how they are not always respected. Women and minorities still have to deal with men not listening to their boundaries on a daily basis, thinking that they still have a little more say in certain situations than women and minorities do. For some years, this discussion has gotten much more recognition because of #MeToo on mostly sexual boundary-breaking behavior. A few weeks ago, the program BOOS revealed that several men in the program The Voice of Holland had shown sexual boundary-breaking behavior with many contestants. These stories touched us because even though we have never experienced something significant like this ourselves, we have been in situations where we felt like our boundaries weren't respected or uncomfortable and unable to speak up for ourselves. If we look at the world and how it is today, there are still many rules made by men that make it harder or more vulnerable to speak out, not just about sexually transgressive behavior but in general. That's why we came up with the following brand vision.&nbsp;</p>
+      <p class="brand_vision">"In a world where people are still living in the rules of the past and patriarchy, we believe that it is vital that people feel safe, protected, and able to voice their feelings and discomforts because only then we can have a fair and civilized society."</p>
       <h4 class="mt-4">Learning Points</h4>
       <p>Identify and justify your learning point (based on the Communication & Media Plan). What did you learn during the duration of the project concerning the campaign? What worked and what didn’t? What went as expected and what didn’t? What would you do differently? Reflect on the past work and describe what you learned.</p>
       <h4 class="mt-4">Future Planning</h4>
